color test reversed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       justify-content: center;
       align-items: center;
       overflow:hidden;
-      color:red;
+      color:#fff;
       font-family:sans-serif;
     }
     h1{
